--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 PORT=3000
 SECRET=dekamond
 OTP_EXP_MIN=1
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=""
+REDIS_DB=0
+RATE_LIMIT=3
+PERIOD_TIME=30
