4. docker-compose and 5. Swagger/OpenAPI 7. Dockerized

--- a/.env
+++ b/.env
@@ -7,3 +7,12 @@ REDIS_PASSWORD=""
 REDIS_DB=0
 RATE_LIMIT=3
 PERIOD_TIME=30
+
+DB_HOST=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=dekamond
+DB_PORT=5432
+
+REDIS_HOST=redis
+REDIS_PORT=6379
